@@ -22,6 +22,10 @@ bzr-svn 0.5.4					UNRELEASED
    * A new content filter "svn-keywords" is now supported and behaves like 
      the svn:keywords Subversion file property.
 
+   * Keywords and end of line properties in svn working copies are now honored. 
+     (#81463)
+
+
 bzr-svn 0.5.3                   2009-03-10
 
   BUG FIXES
